--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+  <div id="test-mode-toggle-container">
+    <label class="switch">
+      <input type="checkbox" id="test-mode-toggle">
+      <span class="slider round"></span>
+    </label>
+    <p>Test Mode</p>
+  </div>
   <div id="api-key-entry">
     <input type="text" id="api-key-input" placeholder="Enter API Key">
     <button id="api-key-submit">Submit</button>
